// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`removes vendor prefixed rules: enzyme.mount 1`] = `
.wrapper {
  display: flex !important;
  transform: translate(0, 0) !important;
}

.title {
  color: palevioletred !important;
  font-size: 1.5em !important;
  text-align: center !important;
}

<Wrapper>
  <section
    className="wrapper"
  >
    <Title>
      <h1
        className="title"
      >
        Hello World, this is my first component styled with aphrodite!
      </h1>
    </Title>
  </section>
</Wrapper>
`;

exports[`removes vendor prefixed rules: enzyme.render 1`] = `
.wrapper {
  display: flex !important;
  transform: translate(0, 0) !important;
}

.title {
  color: palevioletred !important;
  font-size: 1.5em !important;
  text-align: center !important;
}

<section
  class="wrapper"
>
  <h1
    class="title"
  >
    Hello World, this is my first component styled with aphrodite!
  </h1>
</section>
`;

exports[`removes vendor prefixed rules: enzyme.shallow 1`] = `
.wrapper {
  display: flex !important;
  transform: translate(0, 0) !important;
}

<section
  className="wrapper"
>
  <Title>
    Hello World, this is my first component styled with aphrodite!
  </Title>
</section>
`;

exports[`removes vendor prefixed rules: react-test-renderer 1`] = `
.wrapper {
  display: flex !important;
  transform: translate(0, 0) !important;
}

.title {
  color: palevioletred !important;
  font-size: 1.5em !important;
  text-align: center !important;
}

<section
  className="wrapper"
>
  <h1
    className="title"
  >
    Hello World, this is my first component styled with aphrodite!
  </h1>
</section>
`;

exports[`removes vendor prefixed rules: react-testing-library 1`] = `
.wrapper {
  display: flex !important;
  transform: translate(0, 0) !important;
}

.title {
  color: palevioletred !important;
  font-size: 1.5em !important;
  text-align: center !important;
}

<section
  class="wrapper"
>
  <h1
    class="title"
  >
    Hello World, this is my first component styled with aphrodite!
  </h1>
</section>
`;

exports[`removes vendor prefixes inside mediaQueries: enzyme.mount 1`] = `
@media (min-width: 200px) {
  .root {
    transform: translate(0, 0) !important;
  }
}

@supports (display: grid) {
  .root {
    display: flex !important;
  }
}

<div
  className="root"
/>
`;

exports[`removes vendor prefixes inside mediaQueries: enzyme.render 1`] = `
@media (min-width: 200px) {
  .root {
    transform: translate(0, 0) !important;
  }
}

@supports (display: grid) {
  .root {
    display: flex !important;
  }
}

<div
  class="root"
/>
`;

exports[`removes vendor prefixes inside mediaQueries: enzyme.shallow 1`] = `
@media (min-width: 200px) {
  .root {
    transform: translate(0, 0) !important;
  }
}

@supports (display: grid) {
  .root {
    display: flex !important;
  }
}

<div
  className="root"
/>
`;

exports[`removes vendor prefixes inside mediaQueries: react-test-renderer 1`] = `
@media (min-width: 200px) {
  .root {
    transform: translate(0, 0) !important;
  }
}

@supports (display: grid) {
  .root {
    display: flex !important;
  }
}

<div
  className="root"
/>
`;

exports[`removes vendor prefixes inside mediaQueries: react-testing-library 1`] = `
@media (min-width: 200px) {
  .root {
    transform: translate(0, 0) !important;
  }
}

@supports (display: grid) {
  .root {
    display: flex !important;
  }
}

<div
  class="root"
/>
`;
